--- a/.travis.yml
+++ b/.travis.yml
@@ -1,6 +1,12 @@
 sudo: required # Making use of docker 
 services:
     - docker # docker must be preinstalled for building images
+
+env:
+    global:
+        - SHA=$(git rev-parse HEAD)
+        - CLOUD_SDK_CORE_DISABLE_PROMPTS=1
+
 before_install: # all the things that need to be done before the app is setup
     # Next 2 lines download, install and setup google sdk 
     - openssl aes-256-cbc -K $encrypted_0c35eebf403c_key -iv $encrypted_0c35eebf403c_iv -in service-account.json.enc -out service-account.json -d
@@ -9,4 +15,18 @@ before_install: # all the things that need to be done before the app is setup
     - gcloud components update kubectl # update and install kubectl in environment
     # Google Cloud authorization
     - gcloud auth activate-service-account --key-file service-account.json
-      
+    - gcloud config set project bionic-kiln-250905 # tell gcloud what project we're working with.
+    - gcloud config set compute/zone us-east1-b	 # Specify what zone to use for the cluster
+    - gcloud container clusters get-credentials multi-cluster # tell gcloud what cluster we're working with
+                                                              # for any set of commands
+    - echo "$DOCKER_PASSWORD" | docker login -u "$DOCKER_USERNAME" --password-stdin
+    - docker build -t jalexanderbryant/react-test -f ./client/Dockerfile.dev ./client
+
+script: 
+    - docker run -e CI=true jalexanderbryant/react-test npm run test -- --coverage
+
+deploy:
+    provider: script # Tell travis that we'll handle deploying with our own script
+    script: bash ./deploy.sh    # Run this script file
+    on:
+        branch: master # Only do this when we push up to master
